# all-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEFERRED.md  Dockerfile  LICENSE  Makefile.codegen  PRODUCTION.md  README.md  README.zh-CN.md  README.zh-TW.md  REGENERATE.md  RELEASE_NOTES.md  SECURITY.md  STATUS.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  question.yml
.github/archive/: PR_PEER_2026-07.md
.github/workflows/: ci.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: deployment.yaml  hpa.yaml  secret.yaml  service.yaml
docs/: AUDIT.md  BACKUP.md  CUSTOM_AGENT.md  DATAVIEW.md  GRPC.md  METRICS.md  PRODUCTION.md  RATE_LIMIT.md  README.md  RELEASES_v020_v030.md  RUNBOOK.md  STORAGE.md  TODO.md
docs/adr/: 0000-adr-template.md  0001-rs256-jwt.md  0002-postgres-rls.md  0003-github-webhook.md  README.md
examples/custom-agents/: pr-summarizer.yaml  translator.yaml
scripts/: check_no_secrets.py  create_release.py  create_v060_release.py  create_v061_release.py  gen_auth_secret.py  gen_rsa_keys.py  rebuild-docker.sh  start_server.sh  update_zh_readmes.py
scripts/manual_checks/: ws_integration_check.py
src/agent_system/: __main__.py
src/agent_system/agents/: __init__.py  ceo_agent.py  deploy_agent.py  devops_agent.py  docs_agent.py  product_agent.py  review_agent.py  security_agent.py  tech_agent.py  test_agent.py
src/agent_system/agents/custom/: __init__.py  base.py  loader.py  registry.py
src/agent_system/api/: __init__.py  server.py  state.py
src/agent_system/api/routes/: __init__.py  agents.py  audit.py  auth.py  custom_agents.py  github_webhook.py  graph.py  health.py  llm_stream.py  metrics.py  tasks.py
src/agent_system/cli/: graph_cli.py  main.py
src/agent_system/codegen/: __init__.py  all.py  openapi_spec.py  sdk_generator.py  ts_sdk_generator.py
src/agent_system/concurrency/: __init__.py  lock.py
src/agent_system/config/: settings.py  settings.yaml
src/agent_system/core/: access_control.py  agent.py  audit_logger.py  autogen_discussion.py  cache.py  checkpoint_tracker.py  cost_tracker.py  dataview.py  evaluator.py  event_bus.py  failure_ux.py  graph.py  llm_router.py  metrics_middleware.py  notify.py  observability.py  pools.py  quota.py  registry.py  resolver.py  schema.py  security.py  security_middleware.py
src/agent_system/core/audit/: __init__.py  query.py
src/agent_system/core/auth/: __init__.py  context.py  jwt.py  models.py
src/agent_system/core/backup/: __init__.py  manifest.py  restore.py  scheduler.py  sources.py
src/agent_system/core/config/: __init__.py  manager.py
src/agent_system/core/mixins/: __init__.py  base.py  discussion.py  group_isolation.py
src/agent_system/core/rate_limit/: __init__.py  backend.py  registry.py  sliding_window.py
src/agent_system/core/security/: __init__.py  cors.py  tls.py
src/agent_system/core/time/: __init__.py  handling.py
src/agent_system/grpc/: __init__.py  codegen.py  handlers.py  server.py
src/agent_system/grpc/proto/: agent_system.proto
src/agent_system/memory/: embeddings.py  experience.py  graph.py  persistence.py
src/agent_system/memory/storage/: __init__.py  base.py  factory.py  json_backend.py  migrate.py  postgres_backend.py  sqlite_backend.py
src/agent_system/migration/: __init__.py  engine.py
src/agent_system/observability/: __init__.py  instrumentation.py  metrics.py  otel_exporter.py  otel_middleware.py  tracing.py
src/agent_system/onboarding/: __init__.py  ftue.py
src/agent_system/storage/: __init__.py  redis_backend.py  task_store.py
src/agent_system/tools/: base.py  code_tools.py  file_tools.py  mcp_client.py  registry.py
tests/: conftest.py  test_attribution_webhook_custom.py  test_audit_batch.py  test_audit_logger.py  test_audit_query.py  test_audit_task_id.py  test_auth_jwt.py  test_auth_models_rbac.py  test_auth_rs256.py  test_backup.py  test_base_and_isolation_mixins.py  test_boundary_jwt_rotation.py  test_boundary_llm_errors.py  test_boundary_memory_disabled.py  test_boundary_schema_provenance.py  test_boundary_tenant_isolation.py  test_cache.py  test_config_manager.py  test_custom_agent.py  test_custom_agent_loader.py  test_data_provenance.py  test_dataview.py  test_deploy_agent.py  test_discussion_mixin.py  test_experience_real_llm.py  test_experience_success_rate.py  test_extra_agents.py  test_file_sandbox.py  test_ftue.py  test_github_webhook.py  test_grpc_handlers.py  test_grpc_metadata_owner.py  test_iteration1.py  test_iteration2.py  test_iteration3.py  test_iteration4.py  test_iteration5.py  test_iteration6.py  test_iteration7.py  test_iteration8.py  (+38 more)
web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
web/src/: App.tsx  index.css
web/src/components/: Layout.tsx
web/src/lib/: api.ts
web/src/pages/: Dashboard.tsx  Graph.tsx  Metrics.tsx  SubmitTask.tsx  Tasks.tsx
