[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-system"
version = "0.1.0"
description = "Enterprise Multi-Agent Collaboration Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "langgraph>=0.4.0",
    "langchain-anthropic>=0.3.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.49.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
]
autogen = ["autogen-agentchat>=0.4.0", "autogen-ext[openai]>=0.4.0"]
api = ["fastapi>=0.115.0", "uvicorn>=0.30.0", "websockets>=13.0"]
storage = ["sqlalchemy>=2.0", "redis>=5.0", "psycopg2-binary>=2.9"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_system*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
