[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-system"
version = "0.1.0"
description = "Enterprise Multi-Agent Orchestration Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
# NOTE: This list must include EVERYTHING src/ imports (transitive or not)
# because CI does `pip install -e .[api,storage,dev]` from a clean venv.
# Anything missing here breaks the CI unit-tests job with ModuleNotFoundError.
dependencies = [
    "langgraph>=0.4.0",
    "langchain-anthropic>=0.3.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.49.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0",
    "redis>=5.0",
    "psycopg2-binary>=2.9",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
    "openapi-python-client>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
]
autogen = ["autogen-agentchat>=0.4.0", "autogen-ext[openai]>=0.4.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_system*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# Static analysis: ruff + mypy
# Currently advisory: CI runs both but exit code ignored (|| true). Future
# commits can tighten by removing the `|| true` from CI step or moving
# rules to fail-on-violation per-module via per-file-ignores overrides.
# See .github/workflows/ci.yml step "Lint + type-check (advisory)".
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
extend-exclude = [
    "tests/fixtures",
    "web/node_modules",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# Safe rule families only. Each prefix is opt-in.
#   E/F  pycodestyle errors + pyflakes  (must-fix correctness)
#   W    pycodestyle warnings
#   I    isort (import order)
#   UP   pyupgrade (modernize syntax)
#   B    flake8-bugbear (likely bugs)
#   C4   flake8-comprehensions
#   SIM  flake8-simplify
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    # Allow unused imports in __init__.py modules (re-exports)
    "F401",
    # Allow print statements (logging migration is in-progress, not a blocker)
    "T201",
    # Allow `assert` in tests
    "B011",
    # Allow star imports (intentional in some plugin modules)
    "F403", "F405",
]

[tool.ruff.lint.per-file-ignores]
# Tests: allow magic numbers, missing docstrings, longer lines
"tests/**/*.py" = ["E501", "B008", "B904"]
# __init__.py: allow unused (re-export)
"**/__init__.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
# FIXED: Strict mode now enforced on core modules via overrides below.
python_version = "3.11"
mypy_path = "src"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
disallow_untyped_defs = false

# Module-specific overrides — silence known-noisy third-party libs
[[tool.mypy.overrides]]
module = ["autogen_agentchat.*", "autogen_ext.*", "langchain.*", "langgraph.*"]
ignore_missing_imports = true

# FIXED: Strict type checking on core modules (Phase 1)
# These modules MUST have type annotations - no more implicit Any
[[tool.mypy.overrides]]
module = "agent_system.core.*"
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = "agent_system.memory.*"
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = "agent_system.storage.*"
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
"**/__init__.py" = ["F401", "F403"]

